change settings, add GA

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,7 @@
 import about from '../templates/about'
 
 export const meta = {
-  title: 'My Home',
+  title: '主页',
   url: '/',
   description: 'Welcome to my blog'
 }
@@ -16,4 +16,4 @@ Hello there, welcome to my blog! You can use **Markdown** or **HTML (JSX)** to w
 <marquee>hello</marquee>
 <br/>
 
-Repository: [https://github.com/quietshu/blog-template](https://github.com/quietshu/blog-template)
+Repository: [https://github.com/dragonly/blog](https://github.com/dragonly/blog)
