fix vercel.json again

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,10 +10,6 @@ export default about(meta)
 
 <!-- content starts from here -->
 
-Hello there, welcome to my blog! You can use **Markdown** or **HTML (JSX)** to write your posts.
-
-<br/>
-<marquee>hello</marquee>
-<br/>
+对技术和行业的一些思考
 
 Repository: [https://github.com/dragonly/blog](https://github.com/dragonly/blog)
