new post: pytorch 和 CUDA 安装技巧

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,6 +10,6 @@ export default about(meta)
 
 <!-- content starts from here -->
 
-对技术和行业的一些思考
+对技术和行业的一些思考与记录
 
 Repository: [https://github.com/dragonly/blog](https://github.com/dragonly/blog)
