--- a/pages/posts/index.mdx
+++ b/pages/posts/index.mdx
@@ -7,4 +7,4 @@ export const meta = {
 
 export default list(meta)
 
-[My First Blog Post](/posts/hello-world) <time>2019</time>
+[pytorch 和 CUDA 安装技巧](/posts/pytorch-cuda-anaconda) <time>2019</time>
