fix PyTorch in title

--- a/pages/posts/index.mdx
+++ b/pages/posts/index.mdx
@@ -7,4 +7,4 @@ export const meta = {
 
 export default list(meta)
 
-[pytorch 和 CUDA 安装技巧](/posts/pytorch-cuda-anaconda) <time>2019</time>
+[PyTorch 和 CUDA 安装技巧](/posts/pytorch-cuda-anaconda) <time>2019</time>
