--- a/pages/posts/pytorch-cuda-anaconda.mdx
+++ b/pages/posts/pytorch-cuda-anaconda.mdx
@@ -1,7 +1,7 @@
 import post from '../../templates/post'
 
 export const meta = {
-  title: 'pytorch 和 CUDA 安装技巧',
+  title: 'PyTorch 和 CUDA 安装技巧',
   author: '李逸龙',
   date: '2020-08-13',
   description: '记录'
