--- a/pages/posts/pytorch-cuda-anaconda.mdx
+++ b/pages/posts/pytorch-cuda-anaconda.mdx
@@ -4,7 +4,7 @@ export const meta = {
   title: 'PyTorch 和 CUDA 安装技巧',
   author: '李逸龙',
   date: '2020-08-13',
-  description: '记录'
+  description: 'PyTorch 和 CUDA 安装技巧'
 }
 
 export default post(meta)
