post: 高性能TiDB课程系列 - week 1

--- a/pages/posts/index.mdx
+++ b/pages/posts/index.mdx
@@ -7,4 +7,6 @@ export const meta = {
 
 export default list(meta)
 
-[PyTorch 和 CUDA 安装技巧](/posts/pytorch-cuda-anaconda) <time>2019</time>
+[PyTorch 和 CUDA 安装技巧](/posts/pytorch-cuda-anaconda) <time>2020.8</time>
+
+[高性能TiDB课程系列 - week 1](/posts/hptidb-hello-transaction) <time>2020.8</time>
